--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -73,38 +73,44 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
       
-    # ÉTAPE 4 : SE CONNECTER À DOCKER HUB
-    # ------------------------------------
+    # ÉTAPE 4 : SE CONNECTER À DOCKER HUB (OPTIONNEL)
+    # ------------------------------------------------
     # Docker Hub est comme un "magasin" d'images Docker
     # On s'authentifie pour pouvoir publier notre image
     # Les secrets sont stockés dans les paramètres GitHub du projet
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}    # Nom d'utilisateur Docker Hub
-        password: ${{ secrets.DOCKERHUB_TOKEN }}       # Mot de passe/token Docker Hub
+    # NOTE: Cette étape est optionnelle - supprimez les commentaires si vous avez configuré les secrets
+    # - name: Login to DockerHub
+    #   uses: docker/login-action@v1
+    #   with:
+    #     username: ${{ secrets.DOCKERHUB_USERNAME }}    # Nom d'utilisateur Docker Hub
+    #     password: ${{ secrets.DOCKERHUB_TOKEN }}       # Mot de passe/token Docker Hub
         
-    # ÉTAPE 5 : SE CONNECTER À GITHUB CONTAINER REGISTRY
-    # --------------------------------------------------
+    # ÉTAPE 5 : SE CONNECTER À GITHUB CONTAINER REGISTRY (OPTIONNEL)
+    # --------------------------------------------------------------
     # GitHub a aussi son propre "magasin" d'images Docker
     # On publie sur les deux pour avoir plus de choix
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io                              # Adresse du registre GitHub
-        username: ${{ github.repository_owner }}       # Propriétaire du repo (automatique)
-        password: ${{ secrets.GHRC_TOKEN }}            # Token GitHub Container Registry
+    # NOTE: Cette étape est optionnelle - supprimez les commentaires si vous avez configuré les secrets
+    # - name: Login to GitHub Container Registry
+    #   uses: docker/login-action@v1
+    #   with:
+    #     registry: ghcr.io                              # Adresse du registre GitHub
+    #     username: ${{ github.repository_owner }}       # Propriétaire du repo (automatique)
+    #     password: ${{ secrets.GHRC_TOKEN }}            # Token GitHub Container Registry
         
-    # ÉTAPE 6 : CONSTRUIRE ET PUBLIER L'IMAGE
-    # ----------------------------------------
-    # C'est l'étape principale : on construit l'image et on la publie
-    # L'image aura plusieurs "étiquettes" pour les différents registres
-    - name: Build and push
+    # ÉTAPE 6 : CONSTRUIRE L'IMAGE DOCKER
+    # ------------------------------------
+    # C'est l'étape principale : on construit l'image Docker
+    # NOTE: push: false car les connexions aux registres sont désactivées
+    - name: Build Docker image
       uses: docker/build-push-action@v2
       with:
         context: .                                     # Dossier contenant le code
         file: ./Dockerfile                             # Fichier de recette Docker
-        push: true                                     # Publier l'image (pas juste la construire)
+        push: false                                    # Ne pas publier (juste construire localement)
         tags: |                                        # Étiquettes pour identifier l'image
-          jamtur01/simplonwars-farm-nodejs:latest           # Étiquette Docker Hub
-          ghcr.io/jamtur01/simplonwars-farm-nodejs:latest   # Étiquette GitHub Container Registry
+          simplonwars-farm-nodejs:latest              # Étiquette locale
+        # NOTE: Pour publier, décommentez les lignes suivantes et configurez les secrets :
+        # push: true
+        # tags: |
+        #   jamtur01/simplonwars-farm-nodejs:latest           # Étiquette Docker Hub
+        #   ghcr.io/jamtur01/simplonwars-farm-nodejs:latest   # Étiquette GitHub Container Registry
