--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,8 +102,11 @@ jobs:
         # Créer le dossier de déploiement
         mkdir -p docs
         
-        # Copier l'animation Star Wars pour la page d'accueil
-        cp public/index.html docs/index.html
+        # Copier l'animation Star Wars et tous ses assets
+        cp -r public/* docs/
+        
+        # Créer la page pour la route /starwars (même contenu que l'accueil)
+        cp docs/index.html docs/starwars.html
         
         # Créer la page de documentation API
         cat > docs/api-docs.html << 'EOF'
@@ -306,6 +309,159 @@ jobs:
         *Développé par l'équipe Dev FRONT LENS P4 - Formation Simplon 2025*
         EOF
         
+        # Créer une page pour simuler les routes API
+        cat > docs/api.html << 'EOF'
+        <!DOCTYPE html>
+        <html lang="fr">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>SimplonWars Farm - API Demo</title>
+            <style>
+                body {
+                    font-family: 'Arial', sans-serif;
+                    max-width: 800px;
+                    margin: 0 auto;
+                    padding: 20px;
+                    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                    color: white;
+                    min-height: 100vh;
+                }
+                .container {
+                    background: rgba(255, 255, 255, 0.1);
+                    padding: 30px;
+                    border-radius: 15px;
+                    backdrop-filter: blur(10px);
+                    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+                }
+                h1 {
+                    text-align: center;
+                    color: #FFD700;
+                    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+                    margin-bottom: 30px;
+                }
+                .api-demo {
+                    background: rgba(0, 0, 0, 0.3);
+                    padding: 20px;
+                    margin: 20px 0;
+                    border-radius: 10px;
+                    border-left: 4px solid #FFD700;
+                }
+                .animal-card {
+                    background: rgba(255, 255, 255, 0.1);
+                    padding: 15px;
+                    margin: 10px 0;
+                    border-radius: 8px;
+                    border: 1px solid rgba(255, 255, 255, 0.2);
+                }
+                .animal-name {
+                    color: #FFD700;
+                    font-weight: bold;
+                    font-size: 1.2em;
+                }
+                .animal-planet {
+                    color: #4CAF50;
+                    font-style: italic;
+                }
+                .animal-sound {
+                    color: #2196F3;
+                    font-family: 'Courier New', monospace;
+                }
+                .cta-button {
+                    display: inline-block;
+                    background: #FFD700;
+                    color: #333;
+                    padding: 15px 30px;
+                    text-decoration: none;
+                    border-radius: 25px;
+                    font-weight: bold;
+                    margin: 10px;
+                    transition: transform 0.3s ease;
+                }
+                .cta-button:hover {
+                    transform: scale(1.05);
+                }
+            </style>
+        </head>
+        <body>
+            <div class="container">
+                <h1>🌟 SimplonWars Farm - API Demo</h1>
+                
+                <div class="api-demo">
+                    <h2>🦁 Animaux Star Wars Disponibles</h2>
+                    
+                    <div class="animal-card">
+                        <div class="animal-name">🐾 Chewbacca</div>
+                        <div class="animal-planet">Planète: Kashyyyk</div>
+                        <div class="animal-sound">Son: "Wookiee Roar"</div>
+                    </div>
+                    
+                    <div class="animal-card">
+                        <div class="animal-name">🐸 Jabba le Hutt</div>
+                        <div class="animal-planet">Planète: Tatooine</div>
+                        <div class="animal-sound">Son: "Huttese Laugh"</div>
+                    </div>
+                    
+                    <div class="animal-card">
+                        <div class="animal-name">🦅 Porg</div>
+                        <div class="animal-planet">Planète: Ahch-To</div>
+                        <div class="animal-sound">Son: "Porg Chirp"</div>
+                    </div>
+                    
+                    <div class="animal-card">
+                        <div class="animal-name">🐙 Bantha</div>
+                        <div class="animal-planet">Planète: Tatooine</div>
+                        <div class="animal-sound">Son: "Bantha Moo"</div>
+                    </div>
+                    
+                    <div class="animal-card">
+                        <div class="animal-name">🦎 Tauntaun</div>
+                        <div class="animal-planet">Planète: Hoth</div>
+                        <div class="animal-sound">Son: "Tauntaun Call"</div>
+                    </div>
+                </div>
+
+                <div style="text-align: center; margin: 30px 0;">
+                    <a href="/" class="cta-button">🏠 Page d'Accueil</a>
+                    <a href="/api-docs.html" class="cta-button">📚 Documentation</a>
+                    <a href="/starwars.html" class="cta-button">🎬 Animation Star Wars</a>
+                </div>
+
+                <div style="text-align: center; margin-top: 40px; padding-top: 20px; border-top: 1px solid rgba(255, 255, 255, 0.3);">
+                    <p>🌟 Développé par l'équipe <strong>Dev FRONT LENS P4</strong> 🌟</p>
+                    <p>Formation Simplon - 2025</p>
+                </div>
+            </div>
+        </body>
+        </html>
+        EOF
+        
+        # Créer un fichier .htaccess pour gérer les routes
+        cat > docs/.htaccess << 'EOF'
+        RewriteEngine On
+        
+        # Rediriger /api vers api.html
+        RewriteRule ^api/?$ api.html [L]
+        
+        # Rediriger /starwars vers starwars.html
+        RewriteRule ^starwars/?$ starwars.html [L]
+        
+        # Rediriger /api-docs vers api-docs.html
+        RewriteRule ^api-docs/?$ api-docs.html [L]
+        
+        # Rediriger /api/random vers api.html
+        RewriteRule ^api/random/?$ api.html [L]
+        
+        # Rediriger /api/stats vers api.html
+        RewriteRule ^api/stats/?$ api.html [L]
+        
+        # Rediriger /api/search vers api.html
+        RewriteRule ^api/search/?$ api.html [L]
+        
+        # Rediriger /api/planet vers api.html
+        RewriteRule ^api/planet/?$ api.html [L]
+        EOF
+        
         echo "✅ Site statique créé avec succès !"
         
     # ÉTAPE 6 : DÉPLOYER SUR GITHUB PAGES
@@ -324,4 +480,3 @@ jobs:
         # Configuration de sécurité pour éviter les erreurs 403
         enable_jekyll: false                       # Désactiver Jekyll (pas nécessaire pour un site statique)
         cname: ''                                  # Pas de domaine personnalisé 
-        
